--- a/solucoes.html
+++ b/solucoes.html
@@ -132,15 +132,17 @@
 
 <!---->
 
-  <div class="row">
-    <div class="col-sm-12">
-        <div class="display-6">Substituição do couro natural por outros produtos</div>
-        <br>
-        <p style="text-align: justify;">A substituição do couro natural por outros materiais na indústria do calçado tem sido uma tendência crescente nos últimos anos. Uma das principais razões para essa substituição é a preocupação crescente com a sustentabilidade e a proteção dos animais. Além disso, materiais sintéticos e alternativos, como o couro vegano, o algodão orgânico e o poliéster reciclado, apresentam benefícios ambientais e econômicos, como a redução do consumo de água e energia, a diminuição do impacto ambiental e a diversificação dos materiais disponíveis.</p>        
-        <p style="text-align: justify;">No entanto, a substituição do couro natural por materiais alternativos na indústria do calçado pode gerar desafios, como a necessidade de investimentos em pesquisa e desenvolvimento de novos materiais, a adaptação dos processos produtivos e a conscientização dos consumidores sobre as alternativas disponíveis. Além disso, alguns consumidores ainda preferem o couro natural por sua durabilidade, qualidade e tradição. A substituição do couro natural por outros materiais é um tema em constante evolução na indústria do calçado, e é importante que as empresas estejam atentas às demandas dos consumidores e às tendências de mercado.</p>
-    </div>
+<div class="row">
+  <div class="col-sm-12">
+      <div class="display-6">Criação de couro 100% vegetal</div>
+      <br>
+      <p style="text-align: justify;">A criação de uma linha de couro 100% vegetal na indústria de calçado é uma iniciativa que vem ganhando força nos últimos anos, impulsionada pela crescente preocupação com a sustentabilidade e o bem-estar animal. Ao invés de usar couro de origem animal, as empresas investem em tecnologias e processos que permitem a produção de couro a partir de fontes vegetais, como cogumelos, cortiça e outras fibras naturais.
+        Essa prática não só ajuda a reduzir o impacto ambiental e o sofrimento dos animais, como também pode gerar benefícios para as empresas, que podem atender a uma procura crescente por produtos mais éticos e sustentáveis. Além disso, a produção de couro vegetal pode ser uma excelente oportunidade para as empresas se destacarem no mercado, oferecendo produtos de alta qualidade e alinhados com as expectativas dos consumidores modernos.
+        Aumento no mercado de calçado 100% biodegradável</p>
+      <p style="text-align: justify;">O surgimento de mais opções de calçado 100% biodegradáveis é uma tendência crescente na indústria de calçado. Esse calçado é produzido a partir de materiais naturais, como algodão orgânico, juta, cânhamo e cortiça, e são projetados para se decompor completamente quando descartados. Isso significa que esse calçado não deixam um impacto negativo no meio ambiente, ao contrário do calçado convencional que podem levar anos para se decompor.
+        Essa prática é uma excelente oportunidade para as empresas se destacarem no mercado, oferecendo produtos mais sustentáveis e alinhados com as preocupações ambientais dos consumidores. Além disso, a produção de calçado biodegradáveis pode ajudar a melhorar a imagem das empresas, que passam a ser vistas como mais éticas e envolvidas em práticas de responsabilidade ambiental.</p>
 </div>
-
+</div>
 
 <!--Enquadramento histórico-->
     <div class="row">
